# ud-mlops-demo

./: .gitignore
demo_app/: .pre-commit-config.yaml  Makefile  pyproject.toml
